--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-		<title>Jr. Auto Insurance - HTML5 Landing Page Template</title>
+		<title>Quote Me - Smart Vehicle Insurance Quotation Platform</title>
 
 		<!-- Fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Raleway:400,700,800,900" rel="stylesheet">
@@ -15,13 +15,6 @@
 		<!-- Bootstrap -->
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/style.css">
-
-		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-		<!--[if lt IE 9]>
-			<script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-			<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-		<![endif]-->
 	</head>
 	<body id="home">
 		<header class="click-through">
@@ -29,10 +22,11 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-6 col-sm-12">
-							<h2><a href="#"> <span>Jr.</span> Auto Insurance</a></h2>
+							<h2><a href="#"> <span>Quote</span> Me</a></h2>
 						</div>
-						<div class="col-md-6 col-sm-12">
-							<h4>Best Car Insurance Company <span>Since 1990</span></h4>
+						<div align="right" class="col-md-6 col-sm-12">
+							
+							<h2><a href="Backend/section.php">Dashboard</a></h2>
 						</div>
 					</div>
 				</div>
@@ -44,8 +38,8 @@
 						<div class="col-md-offset-1 col-md-10">
 							<div class="hero-text">
 								<h1>GET YOUR <br><span class="big-title">AUTO INSURANCE</span> </h1> <h2>WITHIN MINUTES</h2>
-								<h6>Manage your policy your way, with our mobile app, paperless policy documents and billing, and online automatic bill payments. And Many More..</h6>
-								<a href="#" class="btn btn-primary">REQUEST A QUOTE NOW</a>
+								<h6>Manage your policy your way, with our web app, paperless policy documents and billing, and online automatic bill payments. And Many More..</h6>
+								<a href="Backend/section.php" class="btn btn-primary">REQUEST A QUOTE NOW</a>
 							</div>
 						</div>
 							
@@ -107,8 +101,8 @@
 			 <div class="container">
 					<div class="row">
 						 <div class="col-md-12">
-								<h4>Our Tool free No :</h4>
-								<h2>(1-800) 985-7485</h2>
+								<h4>Our Hotline No :</h4>
+								<h2>(+94) 71-3633-892</h2>
 								<h3>Call us if you have any questions - We are happy to help you</h3>
 						 </div>
 					</div>
@@ -177,7 +171,7 @@
 			<div class="container">
 				<h2>50% Off on Your Car Insurance Renevals</h2>
 				<div class="col-lg-offset-4 col-md-offset-3 col-lg-4 col-md-6">
-					<a class="btn btn-primary btn-lg btn-block" href="#home">GET IT NOW <br><span>Before its gone</span></a>
+					<a class="btn btn-primary btn-lg btn-block" href="Backend/section.php">GET IT NOW <br><span>Before its gone</span></a>
 				</div>
 			</div>
 		</section>
@@ -297,10 +291,10 @@
 		<section class="footer-hero">
 			<div class="container">
 				<div class="row">
-					<h2>Get A Faster and Best Quote For your Car!</h2>
+					<h2>Get A Faster and Best Quote For your Vehicle!</h2>
 					<h6>Don’t Wait - Get Free and Faster Options within minutes.</h6>
 					<div class="col-md-offset-4 col-md-4">
-					<a class="btn btn-primary btn-lg btn-block" href="#home">GET A QUOTE</a>
+					<a class="btn btn-primary btn-lg btn-block" href="Backend/section.php">GET A QUOTE</a>
 					</div>
 				</div>
 			</div>
@@ -310,7 +304,9 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6 col-sm-8">
-						<p>Designed With <span class="fa fa-heart" aria-hidden="true"></span> Made For Themeforest</p>
+						<!-- <p>Designed With <span class="fa fa-heart" aria-hidden="true"></span> Made For Themeforest</p> -->
+						<!-- Copyright © 2018 Automated Centralized Smart EE Checkup Portal Network System. All rights reserved. -->
+						<p>Copyright © 2019 QuoteMe Development Team. All rights reserved.</p>
 					</div>
 					<div class="col-md-6 col-sm-4">
 						<div class="social">
