App Landing page V2

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						</div>
 						<div align="right" class="col-md-6 col-sm-12">
 							
-							<h2><a href="Backend/section.php">Dashboard</a></h2>
+							<h2><a href="Backend/section.php">LOG IN</a></h2>
 						</div>
 					</div>
 				</div>
@@ -37,7 +37,7 @@
 					<div class="row">
 						<div class="col-md-offset-1 col-md-10">
 							<div class="hero-text">
-								<h1>GET YOUR <br><span class="big-title">AUTO INSURANCE</span> </h1> <h2>WITHIN MINUTES</h2>
+								<h1>GET YOUR <br><span class="big-title">AUTO INSURANCE</span> </h1> <h2>TO A LOW BUDGET</h2>
 								<h6>Manage your policy your way, with our web app, paperless policy documents and billing, and online automatic bill payments. And Many More..</h6>
 								<a href="Backend/section.php" class="btn btn-primary">REQUEST A QUOTE NOW</a>
 							</div>
@@ -51,20 +51,23 @@
 		<section class="clients">
 			 <div class="container">
 					<div class="row">
-						<div class="col-md-4 col-sm-12">
+						<div class="col-md-3 col-sm-12">
 							<h6>We are working with good companies...</h6>
 						</div>
 					 	<div class="push-right">
 					 		<div class="col-md-2 col-sm-3">
 								<img src="images/client-logos/client-1.png" class="img-responsive" alt="Client Logo">
 							</div>
-							<div class="col-md-2 col-sm-3">
+							<div class="col-md-1 col-sm-3">
 								<img src="images/client-logos/client-2.png" class="img-responsive" alt="Client Logo">
 							</div>
 							<div class="col-md-2 col-sm-3">
-								<img src="images/client-logos/client-3.png" class="img-responsive" alt="Client Logo">
+								<img src="images/client-logos/client-5.png" class="img-responsive" alt="Client Logo">
 							</div>
 							<div class="col-md-2 col-sm-3">
+								<img src="images/client-logos/client-3.png" class="img-responsive" alt="Client Logo">
+							 </div>
+							 <div class="col-md-2 col-sm-3">
 								<img src="images/client-logos/client-4.png" class="img-responsive" alt="Client Logo">
 						 	</div>
 					 	</div>
@@ -81,15 +84,15 @@
 							<h5>Special features only with our company</h5>
 						</div> <!-- End Features Title -->
 						<div class="features-list">
-							<h4>Low EMI Options</h4>
+							<h4>All Insurence Companies In One Place</h4>
 							<p><img src="images/icons/tick-icon.png" alt="tick">Mauris efficitur id felis a egestas. Morbi semper ante nec elit pretium placerat et sit amet mauris. Fusce at orci sapien. Nulla facilisi.</p>
 						</div> <!-- End Features List 1 -->
 						<div class="features-list">
-							<h4>Low EMI Options</h4>
+							<h4>Insurence Rate For Driver's History</h4>
 							<p><img src="images/icons/tick-icon.png" alt="tick">Donec aliquet libero eget tortor aliquam imperdiet. Nam id ornare dolor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse potenti.</p>
 						</div> <!-- End Features List 2 -->
 						<div class="features-list">
-							<h4>Low EMI Options</h4>
+							<h4>Customer can see all quotations and deside which is good</h4>
 							<p><img src="images/icons/tick-icon.png" alt="tick">Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Quisque ut magna bibendum, dapibus urna nec.</p>
 						</div> <!-- End Features List 3 -->
 					</div>
@@ -115,7 +118,7 @@
 					<div class="col-md-offset-1 col-md-10">
 						<div class="services-title">
 							<h2>Our Best Services</h2>
-							<h5>We are Providing Best in Class Car Insurance Services</h5>
+							<h5>We are Providing Best in Class Vehicle Insurance Services</h5>
 							<p>Curabitur scelerisque nunc eu nibh sagittis interdum. Aenean in tellus ligula. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Praesent mattis eu felis id dignissim. Donec et vehicula diam, volutpat viverra enim.</p>
 						</div>
 					</div>
@@ -169,7 +172,7 @@
 
 		<section class="offer">
 			<div class="container">
-				<h2>50% Off on Your Car Insurance Renevals</h2>
+				<h2>LKR 1000 Off on Your First Vehicle Insurance Installment</h2>
 				<div class="col-lg-offset-4 col-md-offset-3 col-lg-4 col-md-6">
 					<a class="btn btn-primary btn-lg btn-block" href="Backend/section.php">GET IT NOW <br><span>Before its gone</span></a>
 				</div>
@@ -190,37 +193,37 @@
 					<div class="col-md-4">
 						<div class="reviews-list">
 							<img src="images/reviews/user-1.jpg" class="img-thumbnail" alt="client">
-							<h4>Jessica Alba</h4>
+							<h4>Tharindu Dias</h4>
 							<span class="fa fa-star" aria-hidden="true"></span>
 							<span class="fa fa-star" aria-hidden="true"></span>
 							<span class="fa fa-star" aria-hidden="true"></span>
 							<span class="fa fa-star" aria-hidden="true"></span>
 							<span class="fa fa-star" aria-hidden="true"></span>
-							<p>It was very easy to get a can insurance from Jr. Car Insurance. Support Team is Very Friendly, They cleared my all doughts.</p>
+							<p>It was very easy to decide and get a insurance at a low budget from QuoteMe platform.</p>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="reviews-list">
 							<img src="images/reviews/user-2.jpg" class="img-thumbnail" alt="client">
-							<h4>Jhon Smith</h4>
+							<h4>Hoshan Kalana</h4>
 							<span class="fa fa-star" aria-hidden="true"></span>
 							<span class="fa fa-star" aria-hidden="true"></span>
 							<span class="fa fa-star" aria-hidden="true"></span>
 							<span class="fa fa-star" aria-hidden="true"></span>
 							<span class="fa fa-star" aria-hidden="true"></span>
-							<p>Car Accidents maybe happens Jr. Car Insurance Team Will Always Help For You and your car, Fastest Service Ever</p>
+							<p>Professional service.Highly recommend to anyone who wants to find the best insurance deal.</p>
 						</div>
 					</div>
 					<div class="col-md-4">
 						<div class="reviews-list">
 							<img src="images/reviews/user-3.jpg" class="img-thumbnail" alt="client">
-							<h4>Will Jacson</h4>
+							<h4>Oshadha Punchihewa</h4>
 							<span class="fa fa-star" aria-hidden="true"></span>
 							<span class="fa fa-star" aria-hidden="true"></span>
 							<span class="fa fa-star" aria-hidden="true"></span>
 							<span class="fa fa-star" aria-hidden="true"></span>
 							<span class="fa fa-star" aria-hidden="true"></span>
-							<p>It was very easy to get a can insurance from Jr. Car Insurance. Support Team is Very Friendly, They cleared my all doughts.</p>
+							<p>Very easy to use. One web platform for all the insurance needs.</p>
 						</div>
 					</div>
 				</div>
